--- a/.github/workflows/main_pre.yml
+++ b/.github/workflows/main_pre.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: Run schemachange
         env:
-          SF_ACCOUNT: ${{ secrets.SF_ACCOUNT }}
-          SF_USERNAME: ${{ secrets.SF_USERNAME }}
-          SF_ROLE: ${{ secrets.SF_ROLE }}
-          SF_WAREHOUSE: ${{ secrets.SF_WAREHOUSE }}
-          SF_DATABASE: ${{ secrets.SF_DATABASE }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
+          SF_ACCOUNT: ${{ secrets.SF_PRE_ACCOUNT }}
+          SF_USERNAME: ${{ secrets.SF_PRE_USERNAME }}
+          SF_ROLE: ${{ secrets.SF_PRE_ROLE }}
+          SF_WAREHOUSE: ${{ secrets.SF_PRE_WAREHOUSE }}
+          SF_DATABASE: ${{ secrets.SF_PRE_DATABASE }}
+          SNOWFLAKE_PASSWORD: ${{ secrets.SF_PRE_PASSWORD }}
         run: |
           echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           python --version
