--- a/.github/workflows/main_pre.yml
+++ b/.github/workflows/main_pre.yml
@@ -3,8 +3,8 @@ name: snowflake-devops-demo-pre
 # Controls when the action will run. 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
     paths:
       - 'migrations_pre/**'
 
